--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 * {
-  margin: 0;
-  box-sizing: border-box;
+margin: 0;
+box-sizing: border-box;
 }
 body {
-  font-family: "Poppins", sans-serif;
-  background: #111;
+font-family: 'Poppins', sans-serif;
+background: #111;
 }
+
+div {
+padding: 50px;
+display: flex;
+gap: 18px;
+flex-wrap: wrap;
+height: 100vh;
+}
+
 p {
-  color: #fff;
-  margin: 12px 10px;
+flex: 1 32%;
+background: #006eff;
+border-radius: 3px;
+color: #fff;
+padding: 15px 25px;
+transition: 200ms;
+}
+
+p:hover {
+box-shadow: 5px 5px 0px 2px #0054c2;
+}
+
+p:active {
+background: #0055ff;
+box-shadow: 5px 5px 0px 2px #0039ab;
 }
